修改部分jdk14代码以支持jdk8